# usbnavsegda

./: .gitignore  README.md
consoleusbdemo/: consoleusbdemo.sln
consoleusbdemo/consoleusbdemo/: consoleusbdemo.vcxproj  consoleusbdemo.vcxproj.filters  main.c
ncusbdemo/: configure.ac
ncusbdemo/src/: Makefile.am  main.c
usbdemo/: configure.ac  run-clean.sh
usbdemo-xcode/usbdemo-xcode/: main.c
usbdemo-xcode/usbdemo-xcode.xcodeproj/: project.pbxproj
usbdemo-xcode/usbdemo-xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
usbdemo-xcode/usbdemo-xcode.xcodeproj/project.xcworkspace/xcuserdata/artnavsegda.xcuserdatad/: UserInterfaceState.xcuserstate
usbdemo-xcode/usbdemo-xcode.xcodeproj/xcuserdata/artnavsegda.xcuserdatad/xcschemes/: usbdemo-xcode.xcscheme  xcschememanagement.plist
usbdemo/src/: Makefile.am  main.c
winusbdemo/: winusbdemo.sln
winusbdemo/winusbdemo/: dialog.h  dialog.rc  libusb_dyn.c  menu.h  menu.rc  winmain.c  winusbdemo.vcxproj  winusbdemo.vcxproj.filters
